<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorHeader"
        android:padding="20dp"
        android:text="@string/upload_label"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <com.hendraanggrian.appcompat.widget.SocialEditText
                android:id="@+id/description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_gravity="top"
                android:layout_weight="1"
                android:importantForAutofill="no"
                android:inputType="textLongMessage|textMultiLine"
                android:hint="@string/description_hint"
                android:lines="2"
                android:maxLines="4"
                app:socialFlags="hashtag|mention"
                app:hashtagColor="@color/colorSocialTags"
                app:mentionColor="@color/colorSocialTags"
                tools:ignore="LabelFor" />

            <ImageView
                android:id="@+id/thumbnail"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="top"
                android:scaleType="centerCrop"
                tools:ignore="ContentDescription" />

        </LinearLayout>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/private2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/privacy_switch" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/comments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/comments_switch" />

        <Button
            android:id="@+id/upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/upload_button"
            app:icon="@drawable/ic_baseline_arrow_upward_24" />

    </LinearLayout>

</LinearLayout>
