<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login_sheet"
    android:layout_width="match_parent"
    android:layout_height="450dp"
    android:background="@drawable/bg_bottom_sheet"
    android:padding="20dp"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <TextView
        android:id="@+id/description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="@string/login_description"
        app:layout_constraintEnd_toStartOf="@id/close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/close"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/close_button"
        app:srcCompat="@drawable/ic_baseline_close_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/description"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:contentDescription="@string/close_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description">

        <ImageButton
            android:id="@+id/facebook"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginEnd="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/login_with_facebook"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/ic_facebook" />

        <ImageButton
            android:id="@+id/google"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/login_with_google"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/ic_google" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
