<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.otaliastudios.cameraview.CameraView
            android:id="@+id/camera"
            android:keepScreenOn="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cameraFacing="front" />

        <com.example.segmentedprogressbar.SegmentedProgressBar
            android:id="@+id/segments"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/close"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="20dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/close_button"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_baseline_close_24"
            app:tint="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/sound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="@string/sound_hint"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:drawableStartCompat="@drawable/ic_baseline_music_note_24"
            app:drawableTint="@android:color/white" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/flip"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/flip_button"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_baseline_camera_front_24"
                app:tint="@android:color/white" />

            <ImageButton
                android:id="@+id/flash"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginTop="20dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/flash_button"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_baseline_flash_on_24"
                app:tint="@android:color/white" />

            <ImageButton
                android:id="@+id/timer"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginTop="20dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/timer_button"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_baseline_timer_24"
                app:tint="@android:color/white" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageButton
                android:id="@+id/upload"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/upload_button"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/record"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_add_photo_alternate_24"
                app:tint="@android:color/white" />

            <ImageButton
                android:id="@+id/record"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/record_button"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/btn_shutter" />

            <ImageButton
                android:id="@+id/done"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/done_button"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/record"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_check_circle_24"
                app:tint="@android:color/white" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/countdown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible">

            <TextView
                android:id="@+id/count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="100sp"
                android:textStyle="bold"
                tools:text="3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timer_hint"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include layout="@layout/partial_timer_sheet" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
