<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black">

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorHeader"
        android:padding="20dp"
        android:text="@string/filter_label"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@id/filters"
        android:layout_below="@id/header">

        <com.daasuu.gpuv.player.GPUPlayerView
            android:id="@+id/player"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:resize_mode="fixed_width"
            app:use_controller="false" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/close"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@id/header"
        android:background="@android:color/transparent"
        android:contentDescription="@string/close_button"
        app:srcCompat="@drawable/ic_baseline_close_24"
        app:tint="@android:color/white" />

    <ImageButton
        android:id="@+id/done"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/header"
        android:background="@android:color/transparent"
        android:contentDescription="@string/done_button"
        app:srcCompat="@drawable/ic_baseline_check_24"
        app:tint="@android:color/white" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/filters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:padding="5dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

</RelativeLayout>
